@@ -1,3 +1,7 @@
+trunk (unreleased)
+* Fix a serious race condition exposed when multiple threads access
+  the same block device
+
 1.1.0 (16-Dec-2013)
 * Expose the `blkgetsize` function in the external signature.
 * Regenerate build files with OASIS 0.4.0
